--- a/uni/_notes/2024-11-11.md
+++ b/uni/_notes/2024-11-11.md
@@ -10,10 +10,14 @@ When inserting values
 
 SQL
     Create database db_name;
-    \c connect
+    \c (dB) connect to a database
     \l lists all available databases on vm
     \d (entity name) describes entity
+    \d+ for more infor
     \dt describe tables
+    \ds
+    \dv
+    \di
     
 
 
