--- a/uni/_notes/2024-11-19.md
+++ b/uni/_notes/2024-11-19.md
@@ -44,4 +44,15 @@ Fast tracking new technology developments that require new ratified standards.
 
 
 
+Choose research question
+find academia discussing the question
+report what the academia you have read has said
+read more
+report
+discuss conflicting opinions
+
+conclusion - many different opinions, similarities in the narrative surrounding the dangers of AI but highlight the importance of developments
+There needs more research into the issues discussed by x person.
+
+
 
