--- a/uni/_notes/2024-11-22.md
+++ b/uni/_notes/2024-11-22.md
@@ -26,7 +26,7 @@ This completes a packet being sent forward and back between two devices.
 base is to do with the physics of the cable
 10 is the max cable speed in MB/s
 1000 would be the same as 1 GB/s
-In theory max length for copper cables is 100m. In practice it's lower due to energy loss.
+In theory max length for copper cables is 100m. This is based on the maximum amount of energy that the cable can hold. In practice it's lower due to energy loss (through heat).
 
 Crossover cable - a pair of wires is swapped at one end of the cable
 straight cable, copper - both ends are identical
