--- a/uni/_notes/2024-11-11.md
+++ b/uni/_notes/2024-11-11.md
@@ -1,4 +1,4 @@
-No 1:1 relationships, very specific 
+No 1:1 relationships, very specific cases
 
 Landing Database is named after your up, keep clean
 
