--- a/uni/_notes/2024-11-11 - dsd(vm & sql).md
+++ b/uni/_notes/2024-11-11 - dsd(vm & sql).md
@@ -1,6 +1,6 @@
 No 1:1 relationships, very specific cases
 
-Landing Database is named after your up, keep clean
+Landing Database is named after your UP id, keep clean
 
 NULLable data, it is not empty or zero, it is an unknown or not applicable data. Eg, person might not have a phone number or postcode, these are NULLable.
 
@@ -20,7 +20,6 @@ SQL
     \di
     
 
-
 3 levels of access -shown in terminal prompt
      Local machine - your pc
      Server - shows as user@user:~$, no sql
@@ -31,8 +30,3 @@ Single quote is for db to do something, eg insert data using INSERT INTO and VAL
 double quotes are for querying the db using SELECT etc.
 
 devdocs.io
-
-
-Write CV in html, make website.
-Freecodecamp
-Use new elements
