--- a/uni/_notes/2024-12-17 - net(exam).md
+++ b/uni/_notes/2024-12-17 - net(exam).md
@@ -12,8 +12,11 @@ Non-traditional multi choice ~60%
          
 
 Glossary
-Topologies
-Professional standards
+
+**Topologies**
+**Professional standards**
+**Cables**
+
 OSI model
      Describing, discuss the application.
 
